--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,28 +1,27 @@
 ---
-title: 'Introduction'
-description: 'Example section for showcasing API endpoints'
+title: 'Overview'
+description: 'Introduction to C-Mass API and features'
 ---
 
 <Note>
-  If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
+  This API documentation showcases how to purchase carbon credits and offset emissions with ease.
 </Note>
 
-## Welcome
+## Welcome to C-Mass API
 
-There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
+Our API allows you to easily purchase carbon credits for various activities like transportation, logistics, and more.
 
 <Card
-  title="Plant Store Endpoints"
+  title="C-Mass API Endpoints"
   icon="leaf"
-  href="https://github.com/mintlify/starter/blob/main/api-reference/openapi.json"
+  href="https://api.c-mass.com/v1"
 >
   View the OpenAPI specification file
 </Card>
 
 ## Authentication
 
-All API endpoints are authenticated using Bearer tokens and picked up from the specification file.
+All API endpoints require Bearer tokens for authentication.
 
 ```json
 "security": [
@@ -30,4 +29,3 @@ All API endpoints are authenticated using Bearer tokens and picked up from the s
     "bearerAuth": []
   }
 ]
-```
