added APIs and improved landing page

--- a/api-reference/endpoint/orders/getListOfOrders.mdx
+++ b/api-reference/endpoint/orders/getListOfOrders.mdx
@@ -1,5 +1,5 @@
 ---
 title: 'Get List of Orders'
 openapi: 'GET /api/v1/orders'
-description: 'Gets a list of orders in reverse chronological order up to the provided limit number of orders per call.'
+description: 'Gets a list of orders in reverse chronological order up to the provided `limit` number of orders per call.'
 ---
