--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -11,10 +11,14 @@ description: 'Introduction to c-mass API and features'
 
 Our API allows you to easily purchase carbon credits for various activities like transportation, logistics, and more.
 
+## API endpoint
+
+The base URL for this version of the API is `https://carbon-engine.onrender.com/api/v1`. All endpoints described in this documentation are relative to this base URL.
+
 
 ## Authentication
 
-Clients must authenticate by including their CNaught API Key in the Authorization header. If the API key is invalid, a 401 error code will be returned.
+Clients must authenticate by including their c-mass API Key in the `Authorization` header. If the API key is invalid, a 401 error code will be returned.
 
 Use your sandbox API key to make sandbox requests and production API key for production requests.
 
