--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,26 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: 'c-mass makes it easy to help your customers compensate for their carbon footprint.'
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
-
-## Setting up
-
-The first step to world-class documentation is setting up your editing environments.
-
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
+## Getting Started
 
 Update your docs to your brand and add valuable content for the best user conversion.
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="Quick Start Guide"
+    icon="screwdriver-wrench"
+    href="/quickstart"
   >
-    Customize your docs to your company's colors and brands
+    Follow our quickstart guide to start placing Carbon Credits orders in just a few minutes.
   </Card>
   <Card
     title="Reference APIs"
     icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    href="api-reference/introduction"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Learn more about the different features of c-mass available via the API.
   </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
+  
 </CardGroup>
