added APIs and improved landing page

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -44,7 +44,7 @@ You’ll receive a response like this:
 ```javascript
 {
   "message":"Order placed successfully",
-  "order":{"id":"ORD-1728559515925",
+  "order":{"_id":"ORD-1728559515925",
   "amount":0.88,
   "amountFulfilled":0.044,
   "price":0.02,
@@ -53,4 +53,4 @@ You’ll receive a response like this:
 }
 ```
 
-The `id` (in this case `ORD-1728559515925`) will allow you to retrieve your order.
+The `_id` (in this case `ORD-1728559515925`) will allow you to retrieve your order.
