--- a/introduction.mdx
+++ b/introduction.mdx
@@ -5,7 +5,7 @@ description: 'c-mass makes it easy to help your customers compensate for their c
 
 ## Getting Started
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Start here on your journey to integrate Carbon Credits into your product.
 
 <CardGroup cols={2}>
   <Card
