--- a/api-reference/endpoint/portfolios/getListOfPortfolios.mdx
+++ b/api-reference/endpoint/portfolios/getListOfPortfolios.mdx
@@ -1,5 +1,5 @@
 ---
 title: 'Get List of Portfolios'
-openapi: 'GET /api/v1/portfolios'
+openapi: 'GET /v1/portfolios'
 description: 'Gets the list of portfolios the user is able to use for purchasing credits. This list is not paginated - the full list of portfolios is returned.'
 ---
