--- a/api-reference/endpoint/projects/getProjectById.mdx
+++ b/api-reference/endpoint/projects/getProjectById.mdx
@@ -1,5 +1,5 @@
 ---
 title: 'Get Project By Id'
-openapi: 'GET /api/v1/projects/{id}'
+openapi: 'GET /v1/projects/{id}'
 description: 'Returns information about a project'
 ---
