--- a/api-reference/endpoint/quotes/getQuoteByMass.mdx
+++ b/api-reference/endpoint/quotes/getQuoteByMass.mdx
@@ -1,5 +1,5 @@
 ---
 title: 'Get Quote by Emissions Mass'
-openapi: 'POST /api/v1/quotes'
+openapi: 'POST /v1/quotes'
 description: 'Get a price quote for offsetting the given amount of carbon emissions.'
 ---
