--- a/api-reference/endpoint/quotes/getQuoteForFlightEmissions.mdx
+++ b/api-reference/endpoint/quotes/getQuoteForFlightEmissions.mdx
@@ -1,5 +1,5 @@
 ---
 title: 'Get Quote for Flight Emissions'
-openapi: 'POST /api/v1/quotes/flight'
+openapi: 'POST /v1/quotes/flight'
 description: 'Get a price quote for offsetting flight carbon emissions. Will return the amount of CO2e to offset and total price.'
 ---
