--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -30,7 +30,7 @@ Submit a credits order. Replace the `<C-MASS_API_KEY>` placeholder with the API 
 
 ```javascript
 curl --request POST \
-  --url https://carbon-engine.onrender.com/api/v1/orders \
+  --url https://carbon-engine.onrender.com/v1/orders \
   --header 'Authorization: Bearer <C-MASS_API_KEY>' \
   --header 'Content-Type: application/json' \
   --data '{
