--- a/api-reference/endpoint/orders/getOrderById.mdx
+++ b/api-reference/endpoint/orders/getOrderById.mdx
@@ -1,5 +1,5 @@
 ---
 title: 'Get Order By Id'
-openapi: 'GET /api/v1/orders/{id}'
+openapi: 'GET /v1/orders/{id}'
 description: 'Returns information about an order'
 ---
