--- a/api-reference/endpoint/portfolios/getPortfolioById.mdx
+++ b/api-reference/endpoint/portfolios/getPortfolioById.mdx
@@ -1,5 +1,5 @@
 ---
 title: 'Get Portfolio By Id'
-openapi: 'GET /api/v1/portfolios/{id}'
+openapi: 'GET /v1/portfolios/{id}'
 description: 'Returns information about a portfolio.'
 ---
