--- a/api-reference/endpoint/quotes/getQuoteForAirFreightEmissions.mdx
+++ b/api-reference/endpoint/quotes/getQuoteForAirFreightEmissions.mdx
@@ -1,5 +1,5 @@
 ---
 title: 'Get Quote for Air Freight Emissions'
-openapi: 'POST /api/v1/quotes/air-freight'
+openapi: 'POST /v1/quotes/air-freight'
 description: 'Get a price quote for offsetting air freight shipment carbon emissions. Will return the amount of CO2e to offset and total price.'
 ---
