--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -13,7 +13,7 @@ Our API allows you to easily purchase carbon credits for various activities like
 
 ## API endpoint
 
-The base URL for this version of the API is `https://carbon-engine.onrender.com/api/v1`. All endpoints described in this documentation are relative to this base URL.
+The base URL for this version of the API is `https://carbon-engine.onrender.com/v1`. All endpoints described in this documentation are relative to this base URL.
 
 
 ## Authentication
