--- a/introduction copy.mdx
+++ b/introduction copy.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: 'c-mass makes it easy to help your customers compensate for their carbon footprint.'
+description: 'c-mass helps you and your customers offset your collective carbon footprint effortlessly.'
 ---
 
 <img
