--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,20 +1,16 @@
 ---
 title: Introduction
-description: 'c-mass makes it easy to help your customers compensate for their carbon footprint.'
+description: 'c-mass helps you and your customers offset your collective carbon footprint effortlessly.'
 ---
 
 ## Getting Started
 
-Start here on your journey to integrate Carbon Credits into your product.
+Begin your journey to integrating Carbon Credits into your offerings.
+
+
 
 <CardGroup cols={2}>
-  <Card
-    title="Quick Start Guide"
-    icon="screwdriver-wrench"
-    href="/quickstart"
-  >
-    Follow our quickstart guide to start placing Carbon Credits orders in just a few minutes.
-  </Card>
+
   <Card
     title="Reference APIs"
     icon="code"
@@ -22,5 +18,11 @@ Start here on your journey to integrate Carbon Credits into your product.
   >
     Learn more about the different features of c-mass available via the API.
   </Card>
-  
+    <Card
+    title="Quick Start Guide"
+    icon="screwdriver-wrench"
+    href="/quickstart"
+  >
+    Follow our quickstart guide to start placing Carbon Credits orders in just a few minutes.
+  </Card>
 </CardGroup>
