--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -15,13 +15,13 @@ The first step is to generate an API key, which will allow you access to the CNa
 
 - Log in to c-mass.
 - Navigate to the APIs page under the Developers tab.
-- Click the Create sandbox API key button to create a sandbox key, or click Set up API to create a production key (which will require you to set up a payment method).
+- Click the Create test API key button to create a test key, or click Set up API to create a live key (which will require you to set up a payment method).
 
 <img height="200" src="/images/example1.png" />
 
 <Warning>Save your API key somewhere safe; you will only be able to see it once. You can rotate your API key to a new one; the old one will remain valid for 24 hours.</Warning>
 
-<Note>Learn more about <a href='/api-reference/introduction#sandbox-mode'>**Sandbox mode**</a></Note>
+<Note>Learn more about <a href='/api-reference/introduction#test-mode'>**Test Mode**</a></Note>
 
 
 2- **Place an order**
