--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -25,7 +25,7 @@ All endpoints referenced in this documentation are relative to this base URL.
 To access the API, clients must authenticate using their c-mass API Key by including it in the `Authorization` header.  
 
 - If an invalid API key is provided, the API will return a **401 Unauthorized** error.  
-- Use the **test API key** for sandbox requests and the **live API key** for production requests.  
+- Use the **test API key** for test requests and the **live API key** for production requests.  
 
 ### Test Mode  
 
