--- a/introduction.mdx
+++ b/introduction.mdx
@@ -16,13 +16,13 @@ Begin your journey to integrating Carbon Credits into your offerings.
     icon="code"
     href="api-reference/introduction"
   >
-    Learn more about the different features of c-mass available via the API.
+    Discover the various c-mass features accessible through our API.
   </Card>
     <Card
     title="Quick Start Guide"
     icon="screwdriver-wrench"
     href="/quickstart"
   >
-    Follow our quickstart guide to start placing Carbon Credits orders in just a few minutes.
+  Get started quickly by following our quickstart guide to place Carbon Credit orders right away.
   </Card>
 </CardGroup>
