--- a/api-reference/endpoint/orders/postCancelOrder.mdx
+++ b/api-reference/endpoint/orders/postCancelOrder.mdx
@@ -1,5 +1,5 @@
 ---
 title: 'Cancel Order'
 openapi: 'POST /v1/orders/{id}/cancel'
-description: 'When cancelling an order that has been fulfilled, a credit for the price of the order will be applied to the current invoice. This means that it is possible for the credit for a cancellation to appear on the invoice of the following billing period. For example, if a billing period ends between when the order was placed and when it is cancelled, then the credit will be applied to the latter billing period rather than the one during which the order was placed'
+description: 'If a fulfilled order is canceled, a credit for the order's price will be applied to the current invoice. However, depending on the timing, the credit may appear on the invoice for the next billing period. For instance, if the billing cycle ends between the order placement and its cancellation, the credit will be applied to the following billing period instead of the one in which the order was originally placed.'
 ---
