--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -33,7 +33,7 @@ c-mass offers a **Test Mode** that allows users to explore API functionalities w
 
 - Toggle Test Mode via the web dashboard.  
 - The same API endpoints are used for both test and live modes, but a test API key must be provided.  
-- API keys (both test and live) can be generated from the **Developers page**.  
+- API keys (both test and live) can be generated from the **Devs page**.  
 
 ---
 
